# PALS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_holistic_review.md  02_build_plan.md  03_paper_alignment.md
docs/results/: benchmarks.txt
pals/: __init__.py
pals/bench/: __init__.py  evaluate.py  harness.py  noisy.py  players.py
pals/core/: __init__.py  learner.py  lstar.py  preference.py  smt.py  sul.py  table_b.py
pals/envs/: __init__.py  base.py  dots_and_boxes.py  frozen_lake.py  gas_grid.py  minimax.py  nim.py  tic_tac_toe.py
pals/oracles/: __init__.py  composite.py  exact.py  mcts_audit.py  pac.py
pals/shielding/: __init__.py  model_check.py  safety_game.py  shield_oracle.py  spec.py
scripts/: demo.py  plot_benchmarks.py  run_benchmarks.py
tests/: test_smoke.py
tests/bench/: test_evaluate.py  test_harness.py  test_noisy.py  test_players.py  test_robustness.py
tests/core/: test_learner.py  test_lstar.py  test_preference.py  test_smt.py  test_sul.py  test_table_b.py
tests/envs/: test_dots_and_boxes.py  test_env_base.py  test_frozen_lake.py  test_gas_grid.py  test_minimax.py  test_nim.py  test_tic_tac_toe.py
tests/oracles/: test_composite.py  test_exact.py  test_mcts_audit.py  test_pac.py
tests/shielding/: _graph_env.py  test_model_check.py  test_safety_game.py  test_shielding_e2e.py
